--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       ];
 
       // Masukkan nama file musik
-      musik = "songMemory";
+      musik = "songMemory.mp3";
 
       // Jika mau muncul tombol kirim pesan isi true, jika ingin tidak muncul isi false
       tampilKirimPesan = true;
